Fixed potential bug where filtering by sections would not display alphabetically.

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -27,7 +27,7 @@
 	  </nav>
 		<main>
       <div class="container">
-				<h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a turpis et ipsum venenatis suscipit vel sit amet nulla. Etiam ipsum est, ultrices sit amet arcu id, luctus mattis enim. Maecenas molestie quam at leo vestibulum lacinia. Duis vel justo sit amet enim lacinia placerat. Pellentesque a bibendum lectus. Nunc eu massa risus. Etiam accumsan nunc id imperdiet tincidunt. Proin non enim fringilla, porttitor elit sit amet, interdum tortor. Sed et tempor felis. Pellentesque malesuada eros ligula, quis maximus elit posuere vel. Morbi vitae risus nec risus sagittis viverra. Aliquam erat volutpat. Nulla cursus sodales viverra. Morbi non quam ac elit volutpat finibus ac sed erat.</h6>
+				<h6>UCSDPLAN.ME is an application tool that allows a UCSD student to be able to easily add classes into Google Calendar.</h6>
 			</div>
 		</main>
 		<footer>
