--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -39,8 +39,8 @@
     {{/if}}
 	</main>
 	<footer class="footer-vertical">
-		<a href="https://calendar.google.com/calendar/r?cid=http://a6-ucsdplan.herokuapp.com/dummy.ics" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Export to Google Calendar</span><i class="material-icons right">event</i></a>
-		<a href="/dummy.ics" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Download ICAL File</span><i class="material-icons right">file_download</i></a>
+		<a href="https://calendar.google.com/calendar/r?cid=http://a7-ucsdplan.herokuapp.com/ical/{{ user.id }}" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Export to Google Calendar</span><i class="material-icons right">event</i></a>
+		<a href="/ical/{{ user.id }}" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Download ICAL File</span><i class="material-icons right">file_download</i></a>
 	</footer>
 	{{> script }}
 </body>
