--- a/views/login.hbs
+++ b/views/login.hbs
@@ -14,8 +14,8 @@
 	<div class="container">
 	<center>
 		<a href="/auth/google" class="waves-effect waves-light btn btn-large btn-wide"><span class="btn-text-centered">Sign In with Google</span><i class="logo-google left"></i></a>
-		<p class="or">- or -</p>
-		<button class="waves-effect waves-light btn btn-large btn-wide" disabled><span class="btn-text-centered">Sign In as guest</span><i class="material-icons left">person</i></button>
+		<!-- <p class="or">- or -</p>
+		<button class="waves-effect waves-light btn btn-large btn-wide" disabled><span class="btn-text-centered">Sign In as guest</span><i class="material-icons left">person</i></button>-->
 	</center>
 </div>
 </main>
