--- a/views/manage.hbs
+++ b/views/manage.hbs
@@ -55,10 +55,9 @@
         data-confirmNo="Stay">Save
 					<i class="material-icons right">send</i>
 				</button>
-
-				<button class="btn btn-large waves-effect waves-light" id="section-custom" type="submit" name="action" disabled>Add Event
+				<!-- <button class="btn btn-large waves-effect waves-light" id="section-custom" type="submit" name="action" disabled>Add Event
 					<i class="material-icons right">event</i>
-				</button>
+				</button>-->
 			{{else}}
 				<a href="/" class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
 			{{/if}}
