--- a/views/partials/courselist.handlebars
+++ b/views/partials/courselist.handlebars
@@ -3,8 +3,8 @@
         <div class="col s12">
           <div class="card">
             <div class="card-content">
-              <span class="card-title"><small>{{@key}}: {{name}}</small> </span>
-              <p>{{desc}}</p>
+              <span class="card-title"><small>{{@key}}</small> </span>
+              <p>{{name}}</p>
             </div>
             <div class="card-action">
               <a href="/manage/edit/{{@key}}">Edit</a>
