--- a/views/section.hbs
+++ b/views/section.hbs
@@ -23,9 +23,9 @@
 		<button class="btn btn-large waves-effect waves-light" id="section-next" type="submit" name="action">Next
 			<i class="material-icons right">send</i>
 		</button>
-		<button class="btn btn-large waves-effect waves-light" id="section-custom" type="submit" name="action">Add Event
+		<!-- <button class="btn btn-large waves-effect waves-light" id="section-custom" type="submit" name="action">Add Event
 			<i class="material-icons right">event</i>
-		</button>
+		</button>-->
 	</footer>
 	{{> script }}
 </body>
