--- a/views/about.hbs
+++ b/views/about.hbs
@@ -33,8 +33,6 @@
 		<footer>
 		</footer>
 	</form>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-	<script src="/script/script.js"></script>
+	{{> script }}
 </body>
 </html>
