--- a/views/calendar_b.hbs
+++ b/views/calendar_b.hbs
@@ -42,7 +42,7 @@
 	</main>
 	<footer class="footer-vertical">
 		<!--<a href="https://calendar.google.com/calendar/r?cid=http://a7-ucsdplan.herokuapp.com/ical/{{ user.id }}" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Export to Google Calendar</span><i class="material-icons right">event</i></a>-->
-		<a href="/ical/{{ user.id }}" target="_blank" class="waves-effect waves-light btn btn-large btn-wide"><span>Download ICAL File</span><i class="material-icons right">file_download</i></a>
+		<a href="/ical/{{ user.id }}" target="_blank" class="waves-effect waves-light btn btn-large btn-wide" class="ical-download"><span>Download ICAL File</span><i class="material-icons right">file_download</i></a>
 	</footer>
 	{{> script }}
 </body>
