--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>IxD Project</title>
+	<title>UCSDPLAN</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -27,7 +27,7 @@
 	  </nav>
 		<main>
       <div class="container">
-				<h6>UCSDPLAN.ME is an application created to help streamline the the process of adding courses to a calendar application. In particular, UCSDPLAN.ME allows UCSD students to easily and efficiently add courses that they have signed up for on WebReg into Google Calendar.<br></br><br></br>To get started with this application, users must simply add all of the courses they wish to add to their calendar, select the lecture and discussion sections for each class, and download an iCal file. This iCal file can then be exported to Google Calendar for easy and efficient use.<br></br><br></br> As the data for each course is pulled directly from WebReg, users will not have to worry about setting any information about each class--such as time, location or professor. They will not have to set the repeating start and end time manually, as all this information will be included in the iCal file. With UCSDPLAN.ME, scheduling classes is fast, easy and simple. </h6>
+				<h6>UCSDPLAN is an application created to help streamline the the process of adding courses to a calendar application. In particular, UCSDPLAN allows UCSD students to easily and efficiently add courses that they have signed up for on WebReg into Google Calendar.<br></br><br></br>To get started with this application, users must simply add all of the courses they wish to add to their calendar, select the lecture and discussion sections for each class, and download an iCal file. This iCal file can then be exported to Google Calendar for easy and efficient use.<br></br><br></br> As the data for each course is pulled directly from WebReg, users will not have to worry about setting any information about each class--such as time, location or professor. They will not have to set the repeating start and end time manually, as all this information will be included in the iCal file. With UCSDPLAN, scheduling classes is fast, easy and simple. </h6>
 			</div>
 		</main>
 		<footer>
