--- a/views/help.hbs
+++ b/views/help.hbs
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>IxD Project</title>
+	<title>UCSDPLAN</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
