--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -1,4 +1,4 @@
-<title>IxD Project</title>
+<title>UCSDPLAN</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
