--- a/views/partials/course.handlebars
+++ b/views/partials/course.handlebars
@@ -32,18 +32,19 @@
     </div>
     <div class="event-row">
       {{#each this}}
-        <div class="event card-panel {{colorCard ../../course.code type }}">
+        <div class="event card card-panel {{colorCard ../../course.code type }}">
           <div class="card-content white-text">
             <p class="event-details event-time">{{ time }} <span class="event-details event-section">{{ section }}</span></p>
             <h5 class="event-title">{{unabbreviateType type }}</h5>
             <p class="event-details event-location">{{ building }} {{ room }}</p>
             <p class="event-details">{{#each instructors}}{{ this }} {{/each}}</p>
-            <div class="switch">
-              <label class="event-toggle">
-                <input type="checkbox" name="timeslot" class="section-{{ section }}" value="{{ @key }}" {{isChecked @key ../../courseData }}>
-                <span class="lever"></span>
-              </label>
-            </div>
+          </div>
+          <div class="card-footer card-action switch">
+            <span class="event-toggle-description">Tap to add to calendar</span>
+            <label class="event-toggle">
+              <input type="checkbox" name="timeslot" class="section-{{ section }}" value="{{ @key }}" {{isChecked @key ../../courseData }}>
+              <span class="lever"></span>
+            </label>
           </div>
         </div>
       {{/each}}
