Added project logo.

--- a/sass/pages/_login.scss
+++ b/sass/pages/_login.scss
@@ -1,7 +1,7 @@
 .logo-img {
   width: 100%;
   height: 60vh;
-  background: url(http://image.cdnllnwnl.xosnetwork.com/pics32/0/WG/WGPGQVDCXBSRUKY.20120306195832.jpg);
+  background: url(/images/ucsdplanlogo.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 75%;
