--- a/views/index.hbs
+++ b/views/index.hbs
@@ -32,7 +32,7 @@
 				<div class="row">
 					<div class="col s12" id="class-search">
 						<div id="homepage-logo">
-						        <img src="https://upload.wikimedia.org/wikipedia/en/4/44/University_of_California%2C_San_Diego_seal.svg" alt="UC San Diego Logo">
+						        <img src="/images/ucsdplanlogo.png" alt="UC San Diego Logo">
 						</div>
 						<div class="chips chips-autocomplete disabled"></div>
 					</div>
